--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <h1>Olá, mundo!</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, vel est! Doloribus amet laboriosam ut ab dolorem aliquid ipsum accusantium sequi, dicta voluptas quaerat voluptatem incidunt! Nam, nisi! Omnis, earum.</p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id neque quam voluptatum! Explicabo nulla voluptates recusandae, possimus eaque officia cupiditate aspernatur dolores doloremque, corrupti iusto, nemo voluptatum quae repellat ex!</p>
+   <link rel="stylesheet" href="estilos/style.css">
+    <title>Projeto  Redes sociais</title>
 </head>
 <body>
+    <main>
+        <section id="telefone">
+
+        </section>
+        <section id="redes sociais">
+
+        </section>
+    </main>
+
     
 </body>
 </html>
